// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyMetrics slice should render correctly with FirstVariation component 1`] = `
<div>
  <section
    class="key-metrics-slice"
    style="background-color: rgb(17, 18, 19);"
  >
    <div
      class="container aos-init aos-animate"
      data-aos="fade-up"
      data-testid="key-metrics-slice__container"
    >
      <lazyhydrate-stub
        idletimeout="2000"
        whenvisible="true"
      >
        <firstvariation-stub
          animation="fade-up"
          background="black"
          data-testid="first-variation"
        />
      </lazyhydrate-stub>
    </div>
  </section>
</div>
`;

exports[`KeyMetrics slice should render correctly with SecondVariation component 1`] = `
<div>
  <section
    class="key-metrics-slice"
    style="background-color: rgb(17, 18, 19);"
  >
    <div
      class="container aos-init aos-animate"
      data-aos="fade-up"
      data-testid="key-metrics-slice__container"
    >
      <lazyhydrate-stub
        idletimeout="2000"
        whenvisible="true"
      >
        <secondvariation-stub
          animation="fade-up"
          background="black"
          data-testid="second-variation"
        />
      </lazyhydrate-stub>
    </div>
  </section>
</div>
`;

exports[`KeyMetrics slice should render correctly with ThirdVariation component 1`] = `
<div>
  <section
    class="key-metrics-slice"
    style="background-color: rgb(17, 18, 19);"
  >
    <div
      class="container aos-init aos-animate"
      data-aos="fade-up"
      data-testid="key-metrics-slice__container"
    >
      <lazyhydrate-stub
        idletimeout="2000"
        whenvisible="true"
      >
        <thirdvariation-stub
          animation="fade-up"
          background="black"
          data-testid="third-variation"
        />
      </lazyhydrate-stub>
    </div>
  </section>
</div>
`;
